# jupyter-notes

./: .gitignore  Makefile  README.md  pyproject.toml
_static/: main.css  toc.js
deep_learning/: TestJupyter.ipynb
docs/: Readme.md  jquery.toc.js  main.css
docs/_static/: toc2.js
html/etc/: nbconvert_config.py
notes/: Algebra-I.ipynb  Algebra-II.ipynb  Algebra-III.ipynb  Algebra-Visuals.ipynb  DeepLearning-Resources.ipynb  TestJupyter.ipynb  _Algebra-Visuals.ipynb
notes/.ipynb_checkpoints/: TestJupyter-checkpoint.ipynb
notes/utils/: __init__.py
templates/: full.tpl  nbextensions.tpl  toc2.tpl
templates/classic/: base.html.j2
templates/lab/: base.html.j2  index.html.j2
