[tool.poetry]
name = "jupyter-notes"
version = "0.1.0"
description = ""
authors = ["MarceloCaro <marcecaro@gmail.com>"]
readme = "README.md"
packages = [{include = "notes"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^3.6.1"
matplotlib = "^3.7.0"
jupyterlab-hide-code = "^3.5.2"
nbconvert = "^7.2.9"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

